# karolos

./: .gitignore  404.html  LICENSE  README.md  agent_sb.py  agent_sb_ppo.py  agent_sb_sac.py  display.py  display_agent_sb_ppo.py  display_agent_sb_sac.py  display_sb_agent.py  environment.py  environment.yml  environment_sb.yml  index.html  mkdocs.yml  refactor.py  requirements.txt  robot-task-rl.sh  search.html  setup.cfg  setup.py  sitemap.xml
.gitlab/issue_templates/: experiment.md
agents/: __init__.py  agent.py  ddpg.py  index.html  sac.py
agents/nnfactory/: ac.py  (+2 more)
analysis/: analysis.py  network_plotting.py
architecture/: index.html
contributing/: index.html
docs/: agents.md  architecture.md  contributing.md  environments.md  examples.md  getting_started.md  index.md  installation.md  robots.md  tasks.md
environments/: __init__.py  domain_randomization_config.py  environment_robot_task.py  environment_wrapper.py  gym_wrapper.py  index.html  multithreading.py  orchestrator.py
examples/: benchmark_orchestrator.py  index.html  inspect_experts.py  inspect_orchestrator.py  inspect_replay_buffers.py  inspect_robots.py  inspect_robots_tasks.py  inspect_tasks.py  panda_pickplace_expert.py  ppo_panda_reach.py  sac_panda_pickplace.py  sac_panda_reach.py  train_ppo_panda_reach.py  train_sac_panda_reach.py
getting_started/: index.html
installation/: index.html
karolos/: display.py  experiment.py  manager.py  trainer.py  utils.py
robots/: index.html  panda.py
search/: search_index.json
tasks/: index.html  reach.py
trainer/: trainer.py  training.py
(+105 files in other folders)
