[metadata]
# replace with your username:
name = karolos
version = 0.9.1
author = Christian Bitter
author_email = bitter@uni-wuppertal.de
description = A reinforcement-learning suite for robotics research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tmdt-buw/karolos
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Documentation = https://tmdt-buw.github.io/karolos/

[options]
package_dir =
    = karolos
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src